turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:21: error: identifier expected but 'new' found.
	var T: new Array[Int](3)
               ^